[gd_scene load_steps=3 format=3 uid="uid://bpmiyphrxdh17"]

[ext_resource type="Script" path="res://chat_ui.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c7yxm8qvxqw3r" path="res://settings_panel.tscn" id="2"]

[node name="ChatUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.18, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "AI Chat Assistant"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "⚙️"

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart"

[node name="UsageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tokens - Prompt: 0 | Completion: 0 | Total: 0"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Status: Morale 0 | Intel 0 | Turns 0"
horizontal_alignment = 1

[node name="ObjectivesLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
autowrap_mode = 3
text = "[b]Objectives[/b]"
scroll_active = false

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MessagesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="LoadingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AI is thinking..."
horizontal_alignment = 1

[node name="InputContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InputField" type="TextEdit" parent="MarginContainer/VBoxContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type your message... (Cmd/Ctrl+Enter to send)"
wrap_mode = 1

[node name="SendButton" type="Button" parent="MarginContainer/VBoxContainer/InputContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
text = "Send"

[node name="SettingsPanel" parent="." instance=ExtResource("2")]
visible = false
